@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.15 2004/07/13 21:12:23 minskim Exp $
+$NetBSD: distinfo,v 1.16 2004/07/26 17:37:02 minskim Exp $
 
-SHA1 (mathomatic-11.3.tgz) = 7ad8e8e9936a12dc5db0628f69f3fcc66efe0ef6
-Size (mathomatic-11.3.tgz) = 125651 bytes
+SHA1 (mathomatic-11.3b.tgz) = deb0c0211524bc6acf878485cec932c9771b9476
+Size (mathomatic-11.3b.tgz) = 125769 bytes
 SHA1 (patch-aa) = f590bd224831b7f882f7cfed72ba6db39e866985
