@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6682 2004/07/26 17:32:52 shannonjr Exp $
+$NetBSD: CHANGES,v 1.6683 2004/07/26 17:37:02 minskim Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3572,3 +3572,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated doxygen to 1.3.8 [martti 2004-07-26]
 	Added crypto++-5.1 [minskim 2004-07-26]
 	Updated gcc34-ada to 3.4.1nb1 [shannonjr 2004-07-26]
+	Updated mathomatic to 11.3b [minskim 2004-07-26]
